--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@automapper/classes": "^8.7.7",
+    "@automapper/core": "^8.7.7",
+    "@automapper/sequelize": "^8.7.7",
     "@types/express": "^4.17.17",
     "@types/reflect-metadata": "^0.1.0",
     "@types/sequelize": "^4.28.15",
@@ -26,6 +29,7 @@
     "sequelize": "^6.33.0",
     "sequelize-typescript": "^2.1.5",
     "sqlite3": "^5.1.6",
-    "tedious": "^16.4.0"
+    "tedious": "^16.4.0",
+    "typedi": "^0.10.0"
   }
 }
