--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "profilic",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec node --loader ts-node/esm main.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/reflect-metadata": "^0.1.0",
-    "@types/sequelize": "^4.28.15",
-    "@types/validator": "^13.11.1",
-    "express": "^4.18.2",
-    "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.33.0",
-    "sequelize-typescript": "^2.1.5",
-    "sqlite3": "^5.1.6",
-    "tedious": "^16.4.0"
-  }
+    "name": "profilic",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "commonjs",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon --exec node --loader ts-node/esm main.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^3.0.1",
+        "sequelize-cli": "^6.6.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.2.2"
+    },
+    "dependencies": {
+        "@types/chalk": "^2.2.0",
+        "@types/express": "^4.17.17",
+        "@types/mongoose": "^5.11.97",
+        "@types/reflect-metadata": "^0.1.0",
+        "@types/sequelize": "^4.28.15",
+        "@types/validator": "^13.11.1",
+        "chalk": "^4.1.0",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mongoose": "^8.0.0",
+        "reflect-metadata": "^0.1.13",
+        "sequelize": "^6.33.0",
+        "sequelize-typescript": "^2.1.5",
+        "sqlite3": "^5.1.6",
+        "tedious": "^16.4.0"
+    }
 }
