--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
         "@types/chalk": "^2.2.0",
         "@types/express": "^4.17.17",
         "@types/mongoose": "^5.11.97",
+        "@types/multer": "^1.4.11",
         "@types/reflect-metadata": "^0.1.0",
         "@types/sequelize": "^4.28.15",
         "@types/validator": "^13.11.1",
         "chalk": "^4.1.0",
+        "cloudinary": "^1.41.1",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^8.0.0",
-        "reflect-metadata": "^0.1.13",
+        "multer": "^1.4.5-lts.1",
+        "reflect-metadata": "^0.1.14",
         "sequelize": "^6.33.0",
         "sequelize-typescript": "^2.1.5",
         "sqlite3": "^5.1.6",
-        "tedious": "^16.4.0"
+        "tedious": "^16.4.0",
+        "typedi": "^0.10.0"
     }
 }
